criação da 'Base de Dados' do projeto

--- a/Aulas/Aulas/appsettings.json
+++ b/Aulas/Aulas/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Aulas-3318d251-633f-445a-9a38-2830b9aba926;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=tA-Aulas;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
