adição atributo Telemovel à classe Utilizadores

--- a/Aulas/Aulas/Aulas.csproj
+++ b/Aulas/Aulas/Aulas.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>aspnet-Aulas-3318d251-633f-445a-9a38-2830b9aba926</UserSecretsId>
   </PropertyGroup>
